// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Perfiles canónicos · snapshot > Asalariado clase media mexicano (mexican-middle-class) 1`] = `
{
  "insightIds": [
    "hasGoodDebt",
    "investingActively",
    "noIndexFunds",
    "riskProfileMatchesAge",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "MX",
  "perfil": "Asalariado clase media mexicano",
  "sectionProfiles": {
    "debt": "Casi sin lastre",
    "expenses": "Gasto eficiente",
    "habits": "Llevas registro",
    "income": "Ingreso alto",
    "investment": "Inversor activo",
    "profile": null,
    "protection": "Sin cobertura",
    "stability": "Bien protegido",
  },
  "sectionScores": {
    "debt": 67,
    "expenses": 65,
    "habits": 40,
    "income": 85,
    "investment": 62,
    "profile": 0,
    "protection": 0,
    "stability": 67,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Estudiante con deuda educativa (student-with-loans) 1`] = `
{
  "insightIds": [
    "chronicFinancialStress",
    "compoundTimeWasted",
    "hasGoodDebt",
    "leverageAgainstAssets",
    "noEmergencyFund",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "AR",
  "perfil": "Estudiante con deuda educativa",
  "sectionProfiles": {
    "debt": "Manejando la deuda",
    "expenses": "Gasto controlado",
    "habits": "Llevas registro",
    "income": "Ingreso estable",
    "investment": "Inversor en formación",
    "profile": null,
    "protection": "Sin cobertura",
    "stability": "Construyendo el colchón",
  },
  "sectionScores": {
    "debt": 57,
    "expenses": 50,
    "habits": 40,
    "income": 45,
    "investment": 50,
    "profile": 0,
    "protection": 0,
    "stability": 33,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Freelancer ahorrador colombiano (colombian-freelancer) 1`] = `
{
  "insightIds": [
    "investingActively",
    "noDebt",
    "strongEmergencyFund",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "CO",
  "perfil": "Freelancer ahorrador colombiano",
  "sectionProfiles": {
    "debt": "Sin lastre",
    "expenses": "Gasto disciplinado",
    "habits": "Maestría",
    "income": "Ingreso estable",
    "investment": "Inversor activo",
    "profile": null,
    "protection": "Sin cobertura",
    "stability": "Bien protegido",
  },
  "sectionScores": {
    "debt": 93,
    "expenses": 80,
    "habits": 80,
    "income": 55,
    "investment": 78,
    "profile": 0,
    "protection": 0,
    "stability": 77,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Joven precarizado argentino (young-argentine-precarious) 1`] = `
{
  "insightIds": [
    "allBadDebt",
    "chronicFinancialStress",
    "compoundTimeWasted",
    "debtPaymentPressureModerate",
    "incomeBelowMinimum",
    "noBudgetSystem",
    "noEmergencyFund",
    "noFinancialEducation",
    "toxicRates",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "AR",
  "perfil": "Joven precarizado argentino",
  "sectionProfiles": {
    "debt": "Manejando la deuda",
    "expenses": "Gasto controlado",
    "habits": "A ciegas",
    "income": "Ingreso modesto",
    "investment": "Curioso del mercado",
    "profile": null,
    "protection": "Sin cobertura",
    "stability": "Sin red",
  },
  "sectionScores": {
    "debt": 41,
    "expenses": 50,
    "habits": 10,
    "income": 35,
    "investment": 20,
    "profile": 0,
    "protection": 0,
    "stability": 18,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Pareja con hijos clase trabajadora (working-family) 1`] = `
{
  "insightIds": [
    "badCreditScore",
    "chronicFinancialStress",
    "consolidationCandidate",
    "hasGoodDebt",
    "highObligatorySpending",
    "noFinancialEducation",
    "notInvestingButReady",
    "toxicRates",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "CO",
  "perfil": "Pareja con hijos clase trabajadora",
  "sectionProfiles": {
    "debt": "Manejando la deuda",
    "expenses": "Gasto controlado",
    "habits": "Maestría",
    "income": "Ingreso alto",
    "investment": "Curioso del mercado",
    "profile": null,
    "protection": "Sin cobertura",
    "stability": "Resiliencia parcial",
  },
  "sectionScores": {
    "debt": 54,
    "expenses": 50,
    "habits": 80,
    "income": 85,
    "investment": 20,
    "profile": 0,
    "protection": 0,
    "stability": 59,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Rentista experimentado chileno (chilean-rentier) 1`] = `
{
  "insightIds": [
    "automatedBudget",
    "hasGoodDebt",
    "incomeHigh",
    "investingActively",
    "leverageAgainstAssets",
    "lowObligatorySpending",
    "oneVeryLargeDebt",
    "riskProfileMatchesAge",
    "strongEmergencyFund",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "CL",
  "perfil": "Rentista experimentado chileno",
  "sectionProfiles": {
    "debt": "Casi sin lastre",
    "expenses": "Gasto disciplinado",
    "habits": "Maestría",
    "income": "Ingreso alto",
    "investment": "Inversor maduro",
    "profile": null,
    "protection": "Sin cobertura",
    "stability": "Fortaleza",
  },
  "sectionScores": {
    "debt": 75,
    "expenses": 90,
    "habits": 100,
    "income": 85,
    "investment": 93,
    "profile": 0,
    "protection": 0,
    "stability": 100,
  },
}
`;
